syntax = "proto3";

package auth.v1;

option go_package = "user-auth-service/pkg/api/auth/v1;authv1";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
}

message GetUserInfoRequest {}

message GetUserInfoResponse {
  string user_id = 1;
  string username = 2;
}